sm_Istio/istio_manifests/authorize_http.yml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-http-only-from-generator"
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/loadgenerator"]
    to:
    - operation:
        methods: ["GET"]
